--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build and push Docker images
         uses: docker/build-push-action@v2.10.0
         with: 
-          context: .
+          context: ../../
           file: ../../Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/swd_w10_github_actions_intro:latest
