--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -7,18 +7,29 @@ jobs:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
     steps:
-      - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
+      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-       - name: Login to DockerHub
-      uses: docker/login-action@v1 
-      with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+        uses: docker/setup-buildx-action@v1
       - name: Build and push Docker images
-      uses: docker/build-push-action@v2
-      with: 
-        push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/swd_w10_github_actions_intro:latest
+        uses: docker/build-push-action@v2.10.0
+        with: 
+          context: ../../
+          file: ../../Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/swd_w10_github_actions_intro:latest
 
